syntax = "proto3";

package zkproof;

import "cmp-ecdsa/pkg/curve/curve.proto";

message IntegerFactorizationProofMessage {
  bytes salt = 1;
  bytes publicKey = 2;
  bytes x = 3;
  bytes y = 4;
  bytes z = 5;
}

message SchnorrProofMessage {
  bytes salt = 1;
  ecpointgrouplaw.EcPointMessage V = 2;
  ecpointgrouplaw.EcPointMessage alpha = 3;
  bytes u = 4;
  bytes t = 5;
}
